plugins {
	id 'java'
	id 'maven'
}

repositories {
	mavenLocal()
	mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_1_7
targetCompatibility = JavaVersion.VERSION_1_7

sourceSets {
	integrationTest {
		java {
			srcDir 'src/integrationTest/java'
		}
		resources {
			srcDir 'src/integrationTest/resources'
		}
		compileClasspath += sourceSets.test.runtimeClasspath
		runtimeClasspath += sourceSets.test.runtimeClasspath
	}
}

compileJava {
	doFirst {
		options.compilerArgs = [
//			'--module-path', classpath.asPath,
//			'--add-modules', 'jdk.compiler',
//			'--add-modules', 'jdk.compiler/com.sun.source.util=ALL-UNNAMED',
//			'--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
//			'--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
//			'--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
//			'--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
		]
	}
}

//javadoc {
//	doFirst {
//		compilecompilerArgs = [
//			'--module-path', classpath.asPath,
//'--add-modules', 'jdk.compiler',
//			'--add-modules', 'jdk.compiler/com.sun.source.util=ALL-UNNAMED',
//'--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
//'--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
//'--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
//'--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
//		]
//	}
//}

//task javadocJar(type: Jar) {
//	classifier = 'javadoc'
//	from javadoc
//}
//
//task sourcesJar(type: Jar) {
//	classifier = 'sources'
//	from sourceSets.main.allSource
//}
//
//artifacts {
//	archives javadocJar, sourcesJar
//}


dependencies {
	dependencies {

//		def tools = files("${System.properties['java.home']}/lib/tools.jar".replaceAll("/jre", ""))
//		implementation tools
//		implementation('com.github.javaparser:javaparser-core:2.5.1') // java 8
		implementation('com.github.javaparser:javaparser-core:2.4.0') // java 6 - 7
		implementation('org.apache.commons:commons-lang3:3.8.1')

		testCompile 'junit:junit:4.12'
		testCompile group: 'net.openhft', name: 'compiler', version: '2.3.4'
		testCompile group: 'org.mdkt.compiler', name: 'InMemoryJavaCompiler', version: '1.3.0'
		testCompile group: 'commons-io', name: 'commons-io', version: '2.6'

	}
}

task integrationTest(type: Test) {
	description = "Runs Integration Tests"
	testClassesDirs = sourceSets.integrationTest.output.classesDirs
	classpath += sourceSets.integrationTest.runtimeClasspath
}


build.finalizedBy(integrationTest)
